# FA22a

CXX_Archiwum/Zadanie1/: zadaniePierwsze.cpp
CXX_Prata/Rozdzial_2/Zad_3/: Entliczek.cpp
CXX_Prata/Rozdzial_2/Zad_4/: Wiek.cpp
CXX_Prata/Rozdzial_3/: Pytania_Sprawdzajace.txt
CXX_Testy/: book_1.cpp  wskazniki.cpp
CXX_Testy/Inne/: book_1.cpp  figura.cpp
CXX_Testy/Praca/Workspace/Cmake/: CMakeLists.txt  main.cpp
CXX_Zadania/: pointer.cpp  uebung_2_1.cpp
CXX_Zadania/OperatorDV2_v_1/: D2Vector.cpp
CXX_Zadania/Zadanie2/: ZadanieDrugie.cpp
C_Plus_plus/CXX_Testy/Praca/Workspace/Cmake/: CMakeLists.txt
HTML,CSS,JS/3.2 Anchor Elements/: index.html
HTML,CSS,JS/3.3 Image Elements/: index.html  index2.html
HTML,CSS,JS/3.4 Birthday Invite Project/: index.html
HTML,CSS,JS/4.1 Webpages/: index.html
HTML,CSS,JS/5.1. Adding CSS/: external.html  inline.html  internal.html  style.css
HTML,CSS,JS/5.4 Color Vocab Project/: style.css
HTML,CSS,JS/moje_projekty/: topGames.html
HTML,CSS,JS/przykladowy_projekt_strony/: index.html
JAVA_Testy/QDemo/: QDemo.java
JAVA_Testy/Queue/: IQDemo.java  IcharQ.java
JAVA_Testy/RefInterfDemo/: ByTwos.java  SeriesInterface.java
JAVA_Testy/TruckDemo/: Truck.java  TruckDemo.java  Vehicle.java
JAVA_Zadania/Chapter_7/: AlaMaKota.java  MyOwnOptional.java  WildCard.java
JAVA_Zadania/Chapter_8/: IVehicle.java
Python/Test/: Dreiecke.py
Szkola/: Dreieck.py
Szkola/Feuerwehr/: CommandSchlauchAnschliessen.java  CommandWasserMarsch.java  Feuerwehrmann.java  ICommand.java  IObserver.java
Szkola/Persistierung/: Kaufvertrag.txt
Szkola/XML/: XMLCreator.java  XMLValidator.java
src/einUndAusgaben/: Benutzer.java  Rechner.java
(+132 files in other folders)
